--- a/TwoChange/app/src/main/res/layout/activity_log_in.xml
+++ b/TwoChange/app/src/main/res/layout/activity_log_in.xml
@@ -7,24 +7,39 @@
     android:background="@color/PrimaryBackgroundColor"
     tools:context="pes.twochange.LogIn">
 
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="311dp"
+        android:layout_height="56dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="174dp"
+        android:background="@drawable/orangeRoundedButton"
+        android:text="Log In with Google"
+        android:textSize="18sp"
+        app:layout_constraintHorizontal_bias="0.512"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText2" />
+
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="340dp"
-        android:layout_height="35dp"
+        android:layout_width="339dp"
+        android:layout_height="27dp"
         android:text="Password"
         android:textSize="18sp"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="51dp"
         app:layout_constraintTop_toBottomOf="@+id/editText4"
         android:layout_marginRight="16dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        tools:layout_editor_absoluteY="144dp" />
+        app:layout_constraintHorizontal_bias="0.538" />
 
     <EditText
         android:id="@+id/editText2"
-        android:layout_width="339dp"
-        android:layout_height="43dp"
+        android:layout_width="338dp"
+        android:layout_height="37dp"
         android:ems="10"
         android:inputType="textPassword"
         android:layout_marginTop="16dp"
@@ -32,44 +47,48 @@
         android:layout_marginRight="16dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="16dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.583"
+        android:gravity = "bottom" />
 
     <EditText
         android:id="@+id/editText4"
-        android:layout_width="339dp"
-        android:layout_height="36dp"
+        android:layout_width="342dp"
+        android:layout_height="39dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:inputType="textEmailAddress"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        android:layout_marginRight="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="16dp"
+        app:layout_constraintHorizontal_bias="0.625"
         app:layout_constraintLeft_toLeftOf="parent"
-        tools:layout_editor_absoluteY="80dp" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        tools:layout_editor_absoluteX="20dp"
+        android:gravity = "bottom" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="338dp"
-        android:layout_height="28dp"
+        android:layout_width="339dp"
+        android:layout_height="27dp"
         android:text="E-Mail"
         android:textSize="18sp"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="34dp"
+        android:layout_marginTop="16dp"
         android:layout_marginRight="16dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        tools:layout_editor_absoluteY="33dp" />
+        app:layout_constraintHorizontal_bias="0.538" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="311dp"
         android:layout_height="56dp"
-        android:background="@drawable/roundedcornersbutton"
-        android:text="Log In with Google"
+        android:background="@drawable/orangeRoundedButton"
+        android:text="Log In"
         android:textSize="18sp"
-        android:layout_marginTop="156dp"
+        android:layout_marginTop="35dp"
         app:layout_constraintTop_toBottomOf="@+id/editText2"
         android:layout_marginRight="16dp"
         app:layout_constraintRight_toRightOf="parent"
