GI-Login acabada i interaccio amb altres activities

--- a/TwoChange/app/src/main/res/values/colors.xml
+++ b/TwoChange/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#deffab2c</color>
 
     <color name="PrimaryBackgroundColor">#caedcb</color>
+    <color name="BlueColoredButton">#1d7389</color>
 </resources>
