--- a/TwoChange/app/src/main/res/layout/activity_log_in.xml
+++ b/TwoChange/app/src/main/res/layout/activity_log_in.xml
@@ -8,19 +8,22 @@
     tools:context="pes.twochange.LogIn">
 
     <Button
-        android:id="@+id/button2"
-        android:layout_width="311dp"
-        android:layout_height="56dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="174dp"
-        android:background="@drawable/orangeRoundedButton"
-        android:text="Log In with Google"
+        android:id="@+id/googleBtn"
+        android:layout_width="339dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/orangeroundedbutton"
+        android:text="   Login with Google"
         android:textSize="18sp"
-        app:layout_constraintHorizontal_bias="0.512"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/logInBtn"
+        android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText2" />
+        android:layout_marginLeft="8dp"
+        android:drawableLeft="@mipmap/google"
+        android:gravity="left|center_vertical"
+        android:paddingLeft="18dip"
+        app:layout_constraintLeft_toLeftOf="parent"
+        tools:layout_editor_absoluteY="341dp" />
 
     <TextView
         android:id="@+id/textView2"
@@ -38,8 +41,8 @@
 
     <EditText
         android:id="@+id/editText2"
-        android:layout_width="338dp"
-        android:layout_height="37dp"
+        android:layout_width="342dp"
+        android:layout_height="48dp"
         android:ems="10"
         android:inputType="textPassword"
         android:layout_marginTop="16dp"
@@ -48,23 +51,22 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.583"
+        app:layout_constraintHorizontal_bias="0.636"
         android:gravity = "bottom" />
 
     <EditText
         android:id="@+id/editText4"
         android:layout_width="342dp"
-        android:layout_height="39dp"
+        android:layout_height="47dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="16dp"
         android:ems="10"
         android:inputType="textEmailAddress"
-        app:layout_constraintHorizontal_bias="0.625"
+        app:layout_constraintHorizontal_bias="0.7"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:layout_editor_absoluteX="20dp"
         android:gravity = "bottom" />
 
     <TextView
@@ -82,18 +84,37 @@
         app:layout_constraintHorizontal_bias="0.538" />
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="311dp"
-        android:layout_height="56dp"
-        android:background="@drawable/orangeRoundedButton"
-        android:text="Log In"
-        android:textSize="18sp"
+        android:id="@+id/logInBtn"
+        android:layout_width="339dp"
+        android:layout_height="57dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginTop="35dp"
-        app:layout_constraintTop_toBottomOf="@+id/editText2"
-        android:layout_marginRight="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="16dp"
+        android:background="@drawable/orangeroundedbutton"
+        android:text="LogIn"
+        android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.512" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText2"
+        tools:layout_editor_absoluteY="263dp" />
+
+    <Button
+        android:id="@+id/newUserBtn"
+        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+        android:layout_width="339dp"
+        android:layout_height="41dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Create a new user"
+        android:textColor="@color/BlueColoredButton"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.518"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/googleBtn"
+        app:layout_constraintVertical_bias="0.857"
+        tools:layout_editor_absoluteY="454dp" />
 
 </android.support.constraint.ConstraintLayout>
