--- a/TwoChange/app/src/main/res/layout/activity_log_in.xml
+++ b/TwoChange/app/src/main/res/layout/activity_log_in.xml
@@ -32,7 +32,7 @@
         android:text="Password"
         android:textSize="18sp"
         android:layout_marginTop="51dp"
-        app:layout_constraintTop_toBottomOf="@+id/editText4"
+        app:layout_constraintTop_toBottomOf="@+id/mailField"
         android:layout_marginRight="16dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="16dp"
@@ -40,7 +40,7 @@
         app:layout_constraintHorizontal_bias="0.538" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/passwordField"
         android:layout_width="342dp"
         android:layout_height="48dp"
         android:ems="10"
@@ -55,7 +55,7 @@
         android:gravity = "bottom" />
 
     <EditText
-        android:id="@+id/editText4"
+        android:id="@+id/mailField"
         android:layout_width="342dp"
         android:layout_height="47dp"
         android:layout_marginLeft="16dp"
@@ -95,7 +95,7 @@
         android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText2"
+        app:layout_constraintTop_toBottomOf="@+id/passwordField"
         tools:layout_editor_absoluteY="263dp" />
 
     <Button
