Usamos User Controller para hacer el Login por Firebase

--- a/TwoChange/app/src/main/res/layout/activity_login.xml
+++ b/TwoChange/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/PrimaryBackgroundColor"
-    tools:context="pes.twochange.LogIn">
+    tools:context="pes.twochange.presentation.activity.LoginActivtiy">
 
     <Button
         android:id="@+id/googleBtn"
