--- a/TwoChange/app/src/main/res/layout/activity_register.xml
+++ b/TwoChange/app/src/main/res/layout/activity_register.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/PrimaryBackgroundColor"
-    tools:context="pes.twochange.NewUser">
+    tools:context="pes.twochange.presentation.activity.RegisterActivity">
 
     <EditText
         android:id="@+id/repeatPassField"
