--- a/TwoChange/app/src/main/res/layout/activity_zworking.xml
+++ b/TwoChange/app/src/main/res/layout/activity_zworking.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/PrimaryBackgroundColor"
-    tools:context="pes.twochange.zWorking">
+    tools:context="pes.twochange.presentation.activity.zWorking">
 
     <TextView
         android:id="@+id/textView5"
