--- a/TwoChange/app/src/main/res/layout/activity_menu_provisional.xml
+++ b/TwoChange/app/src/main/res/layout/activity_menu_provisional.xml
@@ -12,7 +12,7 @@
         android:layout_height="52dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="25dp"
         android:text="View Profile"
         app:layout_constraintHorizontal_bias="0.529"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -25,7 +25,7 @@
         android:layout_height="52dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="31dp"
+        android:layout_marginTop="25dp"
         android:text="Search User"
         app:layout_constraintHorizontal_bias="0.529"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -38,7 +38,7 @@
         android:layout_height="52dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="25dp"
         android:text="Add Post"
         app:layout_constraintHorizontal_bias="0.529"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -51,7 +51,7 @@
         android:layout_height="52dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="33dp"
+        android:layout_marginTop="25dp"
         android:text="Open Chat"
         app:layout_constraintHorizontal_bias="0.529"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -62,10 +62,22 @@
         android:id="@+id/showChatsBtn"
         android:layout_width="351dp"
         android:layout_height="52dp"
+        android:layout_marginTop="25dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:text="Show Active Chats"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="parent"
         tools:layout_editor_absoluteY="16dp" />
+
+    <Button
+        android:id="@+id/logOutBtn"
+        android:layout_width="351dp"
+        android:layout_height="52dp"
+        android:text="LogOut"
+        android:layout_marginTop="25dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/searchUserBtn"/>
 </android.support.constraint.ConstraintLayout>
