--- a/TwoChange/app/src/main/res/layout/activity_chat.xml
+++ b/TwoChange/app/src/main/res/layout/activity_chat.xml
@@ -15,8 +15,7 @@
         android:layout_alignParentEnd = "true"
         android:layout_alignParentBottom="true"
         android:clickable="true"
-        app:fabSize="mini"
-        />
+        app:fabSize="normal" />
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
@@ -40,6 +39,9 @@
         android:layout_above="@+id/sender_btn"
         android:dividerHeight="10dp"
         android:layout_marginBottom="10dp"
-        android:divider="@android:color/transparent"></ListView>
+        android:divider="@android:color/transparent"
+        android:paddingBottom="10dp"
+        android:stackFromBottom="true"
+        android:transcriptMode="alwaysScroll"></ListView>
     
 </RelativeLayout>
