--- a/TwoChange/app/src/main/res/values/colors.xml
+++ b/TwoChange/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
 
     <color name="PrimaryBackgroundColor">#caedcb</color>
     <color name="BlueColoredButton">#1d7389</color>
+    <color name="black">#000</color>
 </resources>
