--- a/TwoChange/app/src/main/res/layout/activity_new_profile.xml
+++ b/TwoChange/app/src/main/res/layout/activity_new_profile.xml
@@ -20,7 +20,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="16dp"
-            android:text="Name:"
+            android:text="Name: *"
             android:textSize="18sp"
             app:layout_constraintHorizontal_bias="0.538"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -49,7 +49,7 @@
             android:layout_height="21dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            android:text="Surname:"
+            android:text="Surname: *"
             android:textSize="18sp"
             app:layout_constraintHorizontal_bias="0.538"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -131,6 +131,35 @@
             app:layout_constraintTop_toBottomOf="@+id/addressLbl" />
 
         <TextView
+            android:id="@+id/zipLbl"
+            android:layout_width="339dp"
+            android:layout_height="21dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:text="Zip Code:"
+            android:textSize="18sp"
+            app:layout_constraintHorizontal_bias="0.538"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="45dp"
+            app:layout_constraintTop_toBottomOf="@+id/addressField" />
+
+        <EditText
+            android:id="@+id/zipField"
+            android:layout_width="339dp"
+            android:layout_height="42dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text=""
+            app:layout_constraintHorizontal_bias="0.517"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/zipLbl" />
+
+        <TextView
             android:id="@+id/cityLbl"
             android:layout_width="339dp"
             android:layout_height="21dp"
@@ -142,7 +171,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginTop="45dp"
-            app:layout_constraintTop_toBottomOf="@+id/addressField" />
+            app:layout_constraintTop_toBottomOf="@+id/zipField" />
 
         <EditText
             android:id="@+id/cityField"
@@ -159,6 +188,64 @@
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/cityLbl" />
 
+        <TextView
+            android:id="@+id/stateLbl"
+            android:layout_width="339dp"
+            android:layout_height="21dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:text="State/Province:"
+            android:textSize="18sp"
+            app:layout_constraintHorizontal_bias="0.538"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="45dp"
+            app:layout_constraintTop_toBottomOf="@+id/cityField" />
+
+        <EditText
+            android:id="@+id/stateField"
+            android:layout_width="339dp"
+            android:layout_height="42dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text=""
+            app:layout_constraintHorizontal_bias="0.517"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/stateLbl" />
+
+        <TextView
+            android:id="@+id/countryLbl"
+            android:layout_width="339dp"
+            android:layout_height="21dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:text="Country:"
+            android:textSize="18sp"
+            app:layout_constraintHorizontal_bias="0.538"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="45dp"
+            app:layout_constraintTop_toBottomOf="@+id/stateField" />
+
+        <EditText
+            android:id="@+id/countryField"
+            android:layout_width="339dp"
+            android:layout_height="42dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text=""
+            app:layout_constraintHorizontal_bias="0.517"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/countryLbl" />
+
         <Button
             android:id="@+id/FinishBtn"
             android:layout_width="339dp"
@@ -174,6 +261,6 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintHorizontal_bias="0.517"
             android:layout_marginTop="45dp"
-            app:layout_constraintTop_toBottomOf="@+id/cityField" />
+            app:layout_constraintTop_toBottomOf="@+id/countryField" />
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
