--- a/TwoChange/app/src/main/res/layout/content_post_ad.xml
+++ b/TwoChange/app/src/main/res/layout/content_post_ad.xml
@@ -73,8 +73,9 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:background="?attr/selectableItemBackground"
-                        android:onClick="selectImage"
+                        android:onClick="showImageSourcePickDialog"
                         android:padding="20dp"
+                        android:tag="0"
                         android:tint="@color/colorAccent"
                         app:srcCompat="@drawable/ic_image_black_24dp" />
 
@@ -84,8 +85,9 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:background="?attr/selectableItemBackground"
-                        android:onClick="selectImage"
+                        android:onClick="showImageSourcePickDialog"
                         android:padding="20dp"
+                        android:tag="1"
                         android:tint="@color/colorAccent"
                         app:srcCompat="@drawable/ic_image_black_24dp" />
 
@@ -95,8 +97,9 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:background="?attr/selectableItemBackground"
-                        android:onClick="selectImage"
+                        android:onClick="showImageSourcePickDialog"
                         android:padding="20dp"
+                        android:tag="2"
                         android:tint="@color/colorAccent"
                         app:srcCompat="@drawable/ic_image_black_24dp" />
 
@@ -106,8 +109,9 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:background="?attr/selectableItemBackground"
-                        android:onClick="selectImage"
+                        android:onClick="showImageSourcePickDialog"
                         android:padding="20dp"
+                        android:tag="3"
                         android:tint="@color/colorAccent"
                         app:srcCompat="@drawable/ic_image_black_24dp" />
 
