--- a/TwoChange/app/src/main/res/layout/activity_new_profile.xml
+++ b/TwoChange/app/src/main/res/layout/activity_new_profile.xml
@@ -14,18 +14,48 @@
         tools:context="pes.twochange.presentation.activity.NewProfileActivity">
 
         <TextView
-            android:id="@+id/nameLbl"
+            android:id="@+id/userNameLbl"
             android:layout_width="339dp"
             android:layout_height="21dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="16dp"
-            android:text="Name: *"
+            android:text="Username: *"
             android:textSize="18sp"
             app:layout_constraintHorizontal_bias="0.538"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <EditText
+            android:id="@+id/userNameField"
+            android:layout_width="339dp"
+            android:layout_height="42dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text=""
+            app:layout_constraintHorizontal_bias="0.518"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/userNameLbl"
+            tools:layout_editor_absoluteY="43dp" />
+
+        <TextView
+            android:id="@+id/nameLbl"
+            android:layout_width="339dp"
+            android:layout_height="21dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:text="Name: *"
+            android:textSize="18sp"
+            app:layout_constraintHorizontal_bias="0.538"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="45dp"
+            app:layout_constraintTop_toBottomOf="@+id/userNameField" />
 
         <EditText
             android:id="@+id/nameField"
