--- a/TwoChange/app/src/main/res/layout/fragment_recycler_chat.xml
+++ b/TwoChange/app/src/main/res/layout/fragment_recycler_chat.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="pes.twochange.presentation.activity.RecyclerChatFragment">
+    tools:context="pes.twochange.presentation.activity.RecyclerChatActivity">
 
 
     <android.support.v7.widget.RecyclerView
