--- a/TwoChange/app/src/main/res/layout/activity_chat.xml
+++ b/TwoChange/app/src/main/res/layout/activity_chat.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="pes.twochange.presentation.activity.ChatActivity">
+    tools:context="pes.twochange.presentation.activity.ChatActivity"
+    android:id="@+id/rl_view">
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/sender_btn"
