--- a/TwoChange/app/src/main/res/layout/message.xml
+++ b/TwoChange/app/src/main/res/layout/message.xml
@@ -33,7 +33,8 @@
                 android:layout_below="@+id/message_sender"
                 android:layout_alignParentStart="true"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                android:textSize="18sp"/>
+                android:textSize="18sp"
+                android:textColor="@color/black"/>
         </LinearLayout>
     </RelativeLayout>
 
