--- a/TwoChange/app/src/main/res/values/colors.xml
+++ b/TwoChange/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="PrimaryBackgroundColor">#caedcb</color>
     <color name="BlueColoredButton">#1d7389</color>
     <color name="black">#000</color>
+    <color name="white">#fff</color>
 </resources>
