--- a/TwoChange/app/src/main/res/layout/content_post_ad.xml
+++ b/TwoChange/app/src/main/res/layout/content_post_ad.xml
@@ -21,27 +21,39 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <EditText
-                    android:id="@+id/titleTxt"
+                <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="8dp"
-                    android:ems="10"
-                    android:hint="@string/ad_title"
-                    android:inputType="text"
-                    tools:layout_editor_absoluteX="0dp"
-                    tools:layout_editor_absoluteY="0dp" />
+                    android:layout_height="match_parent">
 
-                <EditText
-                    android:id="@+id/descriptionTxt"
+                    <EditText
+                        android:id="@+id/titleTxt"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="8dp"
+                        android:layout_weight="1"
+                        android:ems="10"
+                        android:hint="@string/ad_title"
+                        android:inputType="text"
+                        tools:layout_editor_absoluteX="0dp"
+                        tools:layout_editor_absoluteY="0dp" />
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="8dp"
-                    android:ems="10"
-                    android:hint="@string/ad_description"
-                    android:inputType="textMultiLine"
-                    tools:layout_editor_absoluteX="0dp"
-                    tools:layout_editor_absoluteY="0dp" />
+                    android:layout_height="match_parent">
+
+                    <EditText
+                        android:id="@+id/descriptionTxt"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="8dp"
+                        android:layout_weight="1"
+                        android:ems="10"
+                        android:hint="@string/ad_description"
+                        android:inputType="textMultiLine"
+                        tools:layout_editor_absoluteX="0dp"
+                        tools:layout_editor_absoluteY="0dp" />
+                </android.support.design.widget.TextInputLayout>
 
                 <TextView
                     android:id="@+id/addImagesLbl"
@@ -158,26 +170,37 @@
                         android:layout_margin="8dp"
                         android:orientation="horizontal">
 
-                        <EditText
-                            android:id="@+id/yearTxt"
+                        <android.support.design.widget.TextInputLayout
                             android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="2"
-                            android:ems="10"
-                            android:hint="@string/ad_year"
-                            android:inputType="number"
-                            android:maxLines="1" />
+                            android:layout_height="match_parent"
+                            android:layout_weight="1">
 
-                        <EditText
-                            android:id="@+id/priceTxt"
+                            <EditText
+                                android:id="@+id/yearTxt"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:ems="10"
+                                android:hint="@string/ad_year"
+                                android:inputType="number"
+                                android:maxLines="1" />
+                        </android.support.design.widget.TextInputLayout>
+
+                        <android.support.design.widget.TextInputLayout
                             android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="8dp"
-                            android:layout_weight="3"
-                            android:ems="10"
-                            android:hint="@string/ad_original_price"
-                            android:inputType="number"
-                            android:maxLines="1" />
+                            android:layout_height="match_parent"
+                            android:layout_weight="1">
+
+                            <EditText
+                                android:id="@+id/priceTxt"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="8dp"
+                                android:ems="10"
+                                android:hint="@string/ad_original_price"
+                                android:inputType="number"
+                                android:maxLines="1" />
+                        </android.support.design.widget.TextInputLayout>
+
                     </LinearLayout>
 
                     <TextView
@@ -187,7 +210,8 @@
                         android:layout_marginLeft="16dp"
                         android:layout_marginTop="8dp"
                         android:text="@string/ad_estimated_rating"
-                        android:textSize="12sp" />
+                        android:textSize="12sp"
+                        android:visibility="gone" />
 
                     <TextView
                         android:id="@+id/ratingLbl"
@@ -195,7 +219,8 @@
                         android:layout_height="wrap_content"
                         android:gravity="center_horizontal"
                         android:text="0/100"
-                        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title" />
+                        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
+                        android:visibility="gone" />
 
                 </LinearLayout>
 
