--- a/TwoChange/app/src/main/res/layout/content_post_ad.xml
+++ b/TwoChange/app/src/main/res/layout/content_post_ad.xml
@@ -19,7 +19,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:descendantFocusability="beforeDescendants"
+                android:focusableInTouchMode="true">
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
