--- a/TwoChange/app/src/main/res/layout/activity_splash.xml
+++ b/TwoChange/app/src/main/res/layout/activity_splash.xml
@@ -1,9 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/green_100"
     tools:context="pes.twochange.presentation.activity.SplashActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <ImageView
+        android:id="@+id/logo_image"
+        android:contentDescription="@string/cd"
+        android:layout_width="256dp"
+        android:layout_height="256dp"
+        android:layout_marginTop="96dp"
+        android:layout_centerHorizontal="true"
+        android:src="@mipmap/ic_launcher_icon4"/>
+
+    <TextView
+        android:id="@+id/name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:textSize="32sp"
+        android:text="2CHANGE"
+        android:textColor="@color/black"
+        android:layout_below="@+id/logo_image"
+        android:layout_marginTop="16dp"
+        android:visibility="gone"
+        />
+    <TextView
+        android:id="@+id/slogan"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:textSize="16sp"
+        android:text="2nd chance for everything"
+        android:layout_below="@+id/name"
+        android:layout_marginTop="4dp"
+        android:visibility="gone"
+        />
+
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/slogan"
+        android:layout_marginTop="16dp"
+        android:visibility="gone"
+        />
+
+</RelativeLayout>
