--- a/TwoChange/app/src/main/res/layout/activity_menu_provisional.xml
+++ b/TwoChange/app/src/main/res/layout/activity_menu_provisional.xml
@@ -82,6 +82,17 @@
         app:layout_constraintHorizontal_bias="0.515"
         android:layout_marginBottom="8dp" />
 
+    <Button
+        android:id="@+id/adListBtn"
+        android:layout_width="351dp"
+        android:layout_height="52dp"
+        android:text="Ad List"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.515"
+        android:layout_marginBottom="370dp" />
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="345dp"
@@ -101,10 +112,11 @@
         android:id="@+id/uidLbl"
         android:layout_width="345dp"
         android:layout_height="57dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="85dp"
         app:layout_constraintBottom_toTopOf="@+id/showChatsBtn"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.521" />
 </android.support.constraint.ConstraintLayout>
