--- a/TwoChange/app/src/main/res/layout/activity_ads_lists.xml
+++ b/TwoChange/app/src/main/res/layout/activity_ads_lists.xml
@@ -7,6 +7,20 @@
     tools:context="pes.twochange.presentation.activity.AdsListsActivity"
     android:orientation="vertical">
 
+    <android.support.v7.widget.Toolbar
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/appbar_ads_lists"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:minHeight="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
+    </android.support.v7.widget.Toolbar>
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -56,12 +70,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/offered_list_ad"
-            android:layout_weight="2"></ListView>
+            android:layout_weight="2"
+            android:layout_margin="10dp"></ListView>
         <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/wanted_list_ad"
-            android:layout_weight="2"></ListView>
+            android:layout_weight="2"
+            android:layout_margin="10dp"></ListView>
 
 
     </LinearLayout>
