--- a/TwoChange/app/src/main/res/layout/product.xml
+++ b/TwoChange/app/src/main/res/layout/product.xml
@@ -10,6 +10,14 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:textStyle="normal|bold"/>
+    <TextView
+        android:id="@+id/product_key"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:textStyle="normal|bold"
+        android:visibility="gone"/>
 
 
 </LinearLayout>
