--- a/TwoChange/app/src/main/res/layout/activity_search_profile.xml
+++ b/TwoChange/app/src/main/res/layout/activity_search_profile.xml
@@ -30,7 +30,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:colorForeground="@color/black"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="60dp"
