--- a/TwoChange/app/src/main/res/layout/activity_options.xml
+++ b/TwoChange/app/src/main/res/layout/activity_options.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="pes.twochange.presentation.activity.OptionsActivity">
+    tools:context=".presentation.controller.OptionsActivity">
 
 </RelativeLayout>
