--- a/TwoChange/app/src/main/res/layout/activity_ad.xml
+++ b/TwoChange/app/src/main/res/layout/activity_ad.xml
@@ -10,20 +10,21 @@
         android:id="@+id/ad_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/ad_user"
         android:layout_marginTop="26dp"
-        android:text="TextView" />
+        android:text="TextView"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:id="@+id/ad_user"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="41dp"
-        android:layout_marginTop="54dp"
-        android:text="TextView" />
+        android:layout_marginTop="17dp"
+        android:text="TextView"
+        android:layout_below="@+id/ad_title"
+        android:layout_alignStart="@+id/ad_title"
+        android:textSize="12sp"
+        android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/ad_description"
@@ -32,7 +33,9 @@
         android:layout_alignEnd="@+id/ad_user"
         android:layout_below="@+id/ad_user"
         android:layout_marginTop="16dp"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textSize="12sp"
+        android:textStyle="bold"/>
 
     <RatingBar
         android:id="@+id/ad_rating"
@@ -41,7 +44,9 @@
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/ad_description"
         android:layout_below="@+id/ad_description"
-        android:layout_marginTop="17dp" />
+        android:layout_marginTop="17dp"
+        android:textSize="12sp"
+        android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/ad_category"
@@ -50,7 +55,9 @@
         android:layout_alignStart="@+id/ad_rating"
         android:layout_below="@+id/ad_rating"
         android:layout_marginTop="13dp"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textSize="12sp"
+        android:textStyle="bold"/>
 
     <ViewFlipper
         android:id="@+id/ad_photos"
@@ -59,12 +66,5 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true" />
-
-    <ListView
-        android:id="@+id/ad_wants"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/ad_photos"
-        android:layout_below="@+id/ad_photos" />
 
 </RelativeLayout>
