--- a/TwoChange/app/src/main/res/layout/activity_ad_list.xml
+++ b/TwoChange/app/src/main/res/layout/activity_ad_list.xml
@@ -7,8 +7,20 @@
     android:orientation="vertical"
     tools:context="pes.twochange.presentation.activity.AdListActivity">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recView"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </LinearLayout>
+    </ScrollView>
+
 </LinearLayout>
