--- a/TwoChange/app/src/main/res/layout/list_item_ad.xml
+++ b/TwoChange/app/src/main/res/layout/list_item_ad.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="horizontal">
 
     <android.support.v7.widget.CardView
@@ -30,6 +30,9 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:maxLength="25"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
+                android:paddingTop="8dp"
                 android:text="Title"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:textStyle="bold" />
