Wanted list view

--- a/TwoChange/app/src/main/res/layout/list_item_ad.xml
+++ b/TwoChange/app/src/main/res/layout/list_item_ad.xml
@@ -25,7 +25,7 @@
                 card_view:srcCompat="@mipmap/ic_launcher_icon5" />
 
             <TextView
-                android:id="@+id/title"
+                android:id="@+id/name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
