--- a/TwoChange/app/src/main/res/layout/product_item_row.xml
+++ b/TwoChange/app/src/main/res/layout/product_item_row.xml
@@ -11,6 +11,7 @@
         android:id="@+id/product_item_row_image"
         android:layout_width="96dp"
         android:layout_height="96dp"
+        android:layout_margin="16dp"
         android:contentDescription="@string/product_item_row_image_description" />
 
     <TextView
