Wanted, offered and Match recycler views

--- a/TwoChange/app/src/main/res/layout/activity_ad_lists.xml
+++ b/TwoChange/app/src/main/res/layout/activity_ad_lists.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".presentation.controller.AdListsActivity">
+    tools:context=".presentation.controller.ListsActivity">
 
     <FrameLayout
         android:id="@+id/content"
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:background="?android:attr/windowBackground"
-        app:menu="@menu/navigation" />
+        app:menu="@menu/navigation_lists" />
 
 
 
