--- a/TwoChange/app/src/main/res/menu/navigation_lists.xml
+++ b/TwoChange/app/src/main/res/menu/navigation_lists.xml
@@ -11,4 +11,9 @@
         android:title="@string/offered" />
     <!--??? ICON-->
 
+    <item
+        android:id="@+id/navigation_matches"
+        android:title="@string/matches" />
+    <!--??? ICON-->
+
 </menu>
